--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 python-api-challenge/WeatherPy/api_keys.py
 sql-challenge/EmployeeSQL/config.py
+leaflet-challenge/Leaflet-Step-1/static/js/config.js
