Let's try to push again for Tableau

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 python-api-challenge/WeatherPy/api_keys.py
 sql-challenge/EmployeeSQL/config.py
+tableau-challenge/Resources/202001-citibike-tripdata.csv
+tableau-challenge/Resources/202006-citibike-tripdata.csv
